JavaScriptCore/kjs/array_object.cpp
@@ -101,7 +101,7 @@ bool ArrayInstance::getOwnPropertySlot(ExecState* exec, const Identifier& proper
       return false;
     if (index < storageLength) {
       JSValue *v = storage[index];
-      if (!v || v->isUndefined())
+      if (!v)
         return false;      
       slot.setValueSlot(this, &storage[index]);
       return true;
@@ -120,7 +120,7 @@ bool ArrayInstance::getOwnPropertySlot(ExecState *exec, unsigned index, Property
     return false;
   if (index < storageLength) {
     JSValue *v = storage[index];
-    if (!v || v->isUndefined())
+    if (!v)
       return false;
     slot.setValueSlot(this, &storage[index]);
     return true;
@@ -789,7 +789,7 @@ JSValue* ArrayProtoFunc::callAsFunction(ExecState* exec, JSObject* thisObj, cons
     
     if (id == Filter) 
       resultArray = static_cast<JSObject *>(exec->lexicalInterpreter()->builtinArray()->construct(exec, List::empty()));
-    else {
+    else {
       List args;
       args.append(jsNumber(length));
       resultArray = static_cast<JSObject *>(exec->lexicalInterpreter()->builtinArray()->construct(exec, args));
@@ -838,7 +838,7 @@ JSValue* ArrayProtoFunc::callAsFunction(ExecState* exec, JSObject* thisObj, cons
     if (id == Some || id == Every)
       result = jsBoolean(id == Every);
     else
-      result = thisObj;
+      result = jsUndefined();
     
     for (unsigned k = 0; k < length && !exec->hadException(); ++k) {
       PropertySlot slot;
@@ -885,7 +885,7 @@ JSValue* ArrayProtoFunc::callAsFunction(ExecState* exec, JSObject* thisObj, cons
     for (; index < length; ++index) {
         JSValue* e = getProperty(exec, thisObj, index);
         if (!e)
-            e = jsUndefined();
+            continue;
         if (strictEqual(exec, searchElement, e))
             return jsNumber(index);
     }
@@ -911,7 +911,7 @@ JSValue* ArrayProtoFunc::callAsFunction(ExecState* exec, JSObject* thisObj, cons
     for (; index >= 0; --index) {
         JSValue* e = getProperty(exec, thisObj, index);
         if (!e)
-            e = jsUndefined();
+            continue;
         if (strictEqual(exec, searchElement, e))
             return jsNumber(index);
     }
